# guitar-tab-agent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-audio.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  demo_input_report.md  demo_input_report.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  audio_only_mvp.md  audio_only_smoke_checkpoint.md  codex_for_oss_plan.md  current_state.md  demo_material_policy.md  evaluation.md  future_backlog.md  future_multimodal_fusion.md  local_golden_audio_tests.md  local_web_smoke_checkpoint.md  local_web_upload_handling.md  product_requirements.md  public_alpha_release_checklist.md  real_image_hand_landmark_smoke.md  roadmap.md  video_assisted_smoke_test.md
notebooks/: audio_transcription_diagnostics.ipynb
src/guitar_tab_agent/: __init__.py  cli.py  models.py  schema.py  workflows.py
src/guitar_tab_agent/audio/: __init__.py  basic_pitch_adapter.py  note_filtering.py  pipeline.py
src/guitar_tab_agent/tab/: ascii.py  (+2 more)
tests/: test_ascii_tab.py  test_basic_pitch_adapter.py  test_candidates.py  test_cli.py  test_frame_extractor.py  test_frame_list_json.py  test_fretboard_calibration.py  test_fretboard_transform.py  test_hand_landmark_frame_json.py  test_hand_tracking.py  test_left_hand_likelihood.py  test_left_hand_likelihood_json.py  test_note_filtering.py  test_schema.py  test_simple_decoder.py  test_web_local_app.py  test_workflows.py
tests/fixtures/: audio_only_notes.json
(+15 files in other folders)
