[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tab-agent"
version = "0.1.0"
description = "Generate editable guitar TAB candidates from performance videos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tabgen = "guitar_tab_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
