[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tab-agent"
version = "0.1.0"
description = "Local-first audio-to-TAB draft generation for short guitar phrases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
audio = [
    "basic-pitch",
    "setuptools>=69",
]

[project.scripts]
tabgen = "guitar_tab_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
